fix: fix long title overflow

--- a/src/components/CurrentColor/index.scss
+++ b/src/components/CurrentColor/index.scss
@@ -1,9 +1,9 @@
 .current-color {
   position: fixed;
-  top: 25vh;
+  top: 15vh;
   right: 40vw;
   width: 5vw;
-  height: 50vh;
+  height: 70vh;
   text-align: center;
   -webkit-user-select: none;
      -moz-user-select: none;
